--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -6983,6 +6983,28 @@ first.
 Larger or equal: similar to the @code{<} (smaller than operator), but
 returning 1 when the second popped operand is larger or equal to the first.
 
+@item where
+Change the pixel values `where' a certain condition holds. The conditional
+operators above can be used to define the condition. This operator requires
+three operands, for example, @command{a.fits b.fits c.fits where} will
+result in pixels from @file{b.fits}, where @file{a.fits} has true
+(@mymath{=1}) values, to be replaced by the respective pixels in
+@file{c.fits}. The first popped operand (@file{c.fits} in this example, can
+also be a number, but the second and third have to be images.
+
+Commonly you won't be dealing with conditional images (that only have pixel
+values of 0 or 1) directly. You will mostly use them internally, for
+example:
+
+@example
+$ astarithmetic a.fits 100 > b.fits c.fits where
+@end example
+
+will be read as: Make a conditional image where all the pixels of
+@file{a.fits} that have a value larger than 100 get values of 1, the rest
+0. Any pixel in @file{b.fits} with a corresponding conditional image pixel
+of 1, will be replaced by the corresponding pixel in @file{c.fits}.
+
 @end table
 
 @cartouche
