Pointer increment correction in Arithmetic
In Arithmetic's `where' operator, when the first popped operand was an
array, it would increment the pointer to it only if the third operand (the
conditional) had a value of 1. The increment is now taken outside of
ternary operator.

Also in the documentation, the example for where still had the old
greater-than operator (`>'), which was later (in commit 21eef31, "Letters,
not symbols for Arithmetic's conditional operators") changed to `gt'.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -6997,7 +6997,7 @@ values of 0 or 1) directly. You will mostly use them internally, for
 example:
 
 @example
-$ astarithmetic a.fits 100 > b.fits c.fits where
+$ astarithmetic a.fits 100 gt b.fits c.fits where
 @end example
 
 will be read as: Make a conditional image where all the pixels of
