Old option in Header's examples corrected
The option to add a new keyword to a FITS file's header was initially
`--add' in Header. Later this option was changed to `--write', however, in
the examples of the "Invoking Header" section of the manual, the old
version still remained. It has been corrected now.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -5253,7 +5253,7 @@ One line examples:
 $ astheader image.fits
 $ astheader --update=OLDKEY,153.034,"Old keyword comment"
 $ astheader --remove=COMMENT --comment="Anything you like ;-)."
-$ astheader --add=MYKEY1,20.00,"An example keyword" --add=MYKEY2,fd
+$ astheader --write=MYKEY1,20.00,"An example keyword" --write=MYKEY2,fd
 @end example
 
 @cindex HDU
